--- a/projectchuan/src/main/webapp/resource/css/login.css
+++ b/projectchuan/src/main/webapp/resource/css/login.css
@@ -51,6 +51,7 @@ body {
 	flex-direction: column;
 	justify-content: space-between;
 	
+	
 }
 .header-login{
 	margin-top: 32px;
@@ -98,6 +99,10 @@ body {
 	
 }
 
+#header-top-right{
+	cursor:pointer;
+}
+
 .button-login{
 	width: 88%;
 	height: 38px;
@@ -130,4 +135,8 @@ body {
 	padding-left: 42px;
 	
 	
+}
+
+.container-signup-form{
+	display: none !important;
 }
